--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.generation</groupId>
-	<artifactId>lojaGamer</artifactId>
+	<artifactId>lojadegames</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Blog Pessoal </name>
-	<description>Projeto Blog Pessoal desenvolvido no bootcamp da Generation.</description>
+	<name>LojadeGames</name>
+	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -46,6 +46,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>  
+	<groupId>org.springframework.boot</groupId>  
+	<artifactId>spring-boot-starter-security</artifactId>  
+</dependency>
+
+<dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+</dependency>
+
 	</dependencies>
 
 	<build>
